# opencv-labs

./: .gitignore  README.md
background-switcher/: README.md  main.py
camera-paint/: README.md  main.py
canvas-basic-editor/: README.md  devbox.json  pyproject.toml
canvas-basic-editor/src/: __main__.py
christmas-photoshop/: README.md  main.py
dog-feelings-classifier/: .gitignore  main.ipynb
object-counter/: README.md  main.py  requirements.txt
roi-editor/: README.md  main.py
webcam-blur-filter/: README.md  main.py
