[tool.poetry]
name = "canvas-basic-editor"
version = "0.1.0"
description = ""
authors = ["John Lago <750845+Lagoja@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
